--- a/src/5/css/index.scss
+++ b/src/5/css/index.scss
@@ -1,3 +1,61 @@
+.App {
+  padding: 30px;
+}
+
+.news-form {
+  width: 400px;
+
+  label {
+    display: block;
+    margin-top: 15px;
+  }
+
+  [type='text'],
+  [type='file'],
+  textarea {
+    display: block;
+    width: 100%;
+  }
+
+  span {
+    display: block;
+    font-weight: 700;
+  }
+
+  .news-form__choices {
+    display: flex;
+
+    .news-form__list {
+      flex: 0 1 50%;
+
+      & > span {
+        margin-top: 15px;
+      }
+
+      label {
+        display: flex;
+        align-items: center;
+        margin-top: unset;
+
+        span {
+          margin-left: 10px;
+          font-weight: 400;
+          margin-top: unset;
+        }
+      }
+    }
+  }
+
+  .news-form__bttns {
+    display: flex;
+    margin-top: 15px;
+
+    button {
+      margin-right: 15px;
+    }
+  }
+}
+
 .news-item {
   margin: 15px;
   padding: 15px;
